using System.Collections;
using System.Collections.Generic;
using UnityEngine;


namespace ABOGGUS.BossObjects
{
    internal class BossConstants
    {
        public const string ATTACKLEFT = "MantisArmLeft";
        public const string ATTACKBOTH = "MantisArmBoth";
        public const string ATTACKRIGHT = "MantisArmRight";

        public const string MOVEBACKWARD = "MantisMoveBackward";
        public const string MOVEFORWARD = "MantisMoveForward";
        public const string MOVELEFT = "MantisMoveLeft";
        public const string MOVERIGHT = "MantisMoveRight";

        public const string ANIMATOR_MOVE = "Moving";
        public const string ANIMATOR_ATTACK = "Attacking";
        public const string ANIMATOR_DIRECTION = "Direction";
        public const string ANIMATOR_ATTACKTYPE = "AttackType";
    }
}
